fix border collapse on table

--- a/css/sytle.css
+++ b/css/sytle.css
@@ -56,6 +56,9 @@ h1{
 }
 
 /* terza section con tabella  */
+table{
+    border-collapse: collapse;
+}
 
 thead{
     background-color: rgb(0, 162, 255);
